fix: 启动脚本语法修复